--- a/_config.yml
+++ b/_config.yml
@@ -25,17 +25,17 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 navbar-links:
   Contact: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+    - Research: "http://deanattali.com/beautiful-jekyll/"
+    - Publications: "http://www.markdowntutorial.com/"
+    - Join us!: "https://pages.github.com/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/logo-01.png"
+# avatar: "/img/logo-01.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+title-img: "/img/logo-01.png"
 
 # --- Background colour/image options --- #
 
