--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ navbar-img: "/img/if-fish.png"
 # footer-col: "blue"
 # footer-img: "/img/bgimage.png"
 # page-col: "#FF0000"
-# page-img: "/img/bgimage.png"
+page-img: "/img/if-fish.png"
 
 # --- Footer options --- #
 
@@ -103,7 +103,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+# url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
