--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ navbar-img: "/img/if-fish.png"
 # footer-col: "blue"
 # footer-img: "/img/bgimage.png"
 # page-col: "#FF0000"
-page-img: "/img/if-fish.png"
+# page-img: "/img/if-fish.png"
 
 # --- Footer options --- #
 
