--- a/_config.yml
+++ b/_config.yml
@@ -56,33 +56,33 @@ navbar-img: "/img/if-fish.png"
 author:
   name: Sujatha Jagannathan
   email: "sujatha.jagannathan@ucdenver.edu"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
+  # facebook: yourname  # eg. daattali
+  github: jagannathan-lab    # eg. daattali
   twitter: RNA_biologist   # eg. daattali
-  reddit: yourname    # eg. daattali
-  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. daattali
-  xing: yourname      # eg. daattali
-  stackoverflow: yourlink  # eg. "3943160/daattali"
-  snapchat: yourname  # eg. daattali
-  instagram: yourname # eg. daattali
-  youtube: yourlink   # eg. user/daattali or channel/daattali
-  spotify: yourname   # eg. daattali
+  # reddit: yourname    # eg. daattali
+  # google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
+  linkedin: sujathajagannathan  # eg. daattali
+  # xing: yourname      # eg. daattali
+  # stackoverflow: yourlink  # eg. "3943160/daattali"
+  # snapchat: yourname  # eg. daattali
+  # instagram: yourname # eg. daattali
+  # youtube: yourlink   # eg. user/daattali or channel/daattali
+  # spotify: yourname   # eg. daattali
   telephone: yourphone   # eg. +14159998888
   steam: yourname     # eg. daattali
   twitch: yourname    # eg. daattali
-  yelp: yourname      # eg. daattali
+  # yelp: yourname      # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
+  facebook: false
   email: true
   twitter: true
   google-plus: false
   github: true
   reddit: false
-  linkedin: false
+  linkedin: true
   xing: false
   stackoverflow: false
   snapchat: false
