--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ navbar-links:
   Research: "http://deanattali.com/beautiful-jekyll/"
   Publications: "http://www.markdowntutorial.com/"
   Join us!: "https://pages.github.com/"
-  Resources:
-    - Research: "http://deanattali.com/beautiful-jekyll/"
-    - Publications: "http://www.markdowntutorial.com/"
-    - Contact: "aboutme"
-    - Join us!: "https://pages.github.com/"
+  #Resources:
+  #  - Research: "http://deanattali.com/beautiful-jekyll/"
+  #  - Publications: "http://www.markdowntutorial.com/"
+  #  - Contact: "aboutme"
+  #  - Join us!: "https://pages.github.com/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
