--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 # List of links in the navigation bar
 navbar-links:
   Contact: "aboutme"
-  Research: "http://deanattali.com/beautiful-jekyll/"
-  Publications: "http://www.markdowntutorial.com/"
-  Join us!: "https://pages.github.com/"
+  Research: "research"
+  Publications: "publications"
+  Join us!: "joinus"
   #Resources:
   #  - Research: "http://deanattali.com/beautiful-jekyll/"
   #  - Publications: "http://www.markdowntutorial.com/"
