--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,15 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # List of links in the navigation bar
 navbar-links:
-  Research: "https://jagannathan-lab.github.io/"
-  Publications: "publications"
-  Contact: "contact"
-  Join us!: "joinus"
-  #Resources:
-  #  - Research: "http://deanattali.com/beautiful-jekyll/"
-  #  - Publications: "http://www.markdowntutorial.com/"
-  #  - Contact: "aboutme"
-  #  - Join us!: "https://pages.github.com/"
+  #Research: "https://jagannathan-lab.github.io/"
+  #Publications: "publications"
+  #Contact: "contact"
+  #Join us!: "joinus"
+  Jagannathan Laboratory:
+  - Research: "https://jagannathan-lab.github.io/"
+  - Publications: "publications"
+  - Contact: "contact"
+  - Join us!: "joinus"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
