--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # List of links in the navigation bar
 navbar-links:
-  Jagannathan Laboratory
+  Jagannathan Laboratory: ""
   Research: "https://jagannathan-lab.github.io/"
   Publications: "publications"
   People: "people"
