--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,6 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # List of links in the navigation bar
 navbar-links:
-  Jagannathan Laboratory           : ""
   Research: "https://jagannathan-lab.github.io/"
   Publications: "publications"
   People: "people"
@@ -40,7 +39,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: ""
+# title-img: ""
 
 # --- Background colour/image options --- #
 
