--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Jagannathan Laboratory
+#title: Jagannathan Laboratory
 
 # Short description of your site
-description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
+#description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # --- Navigation bar options --- #
 
@@ -40,7 +40,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/jagannathan-laboratory.png"
+title-img: "/img/jagannathan-laboratory-fun.png"
 
 # --- Background colour/image options --- #
 
