--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/jagannathan-laboratory.png"
+title-img: "/img/jagannathan-lab.png"
 
 # --- Background colour/image options --- #
 
