--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: JAGANNATHAN LABORATORY
+title: Jagannathan Laboratory
 
 # Short description of your site
 description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
@@ -23,7 +23,7 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # List of links in the navigation bar
 navbar-links:
-  About Us: "labculture"
+  About Us: "aboutus"
   People: "people"
   Research: "research"
   Publications: "publications"
