--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: Jagannathan Laboratory
 description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 collections:
-- people
+  people:
 
 # --- Navigation bar options --- #
 
