--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ collections:
 # List of links in the navigation bar
 navbar-links:
   About Us: "aboutus"
-  People: "people"
+  People: site.people
   Research: "research"
   Publications: "publications"
   Join us!: "joinus"
