--- a/_config.yml
+++ b/_config.yml
@@ -21,18 +21,14 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 collections:
   people:
-    output: true
-    permalink: /people/:path/
   research:
-    output: true
-    permalink: /research/:path/
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Us: "aboutus"
-  People: "people"
+  People: "people.html"
   Research: "research"
   Publications: "publications"
   Join us!: "joinus"
