--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ collections:
 # List of links in the navigation bar
 navbar-links:
   About Us: "aboutus"
-  People: "people.html"
+  People: "people"
   Research: "research"
   Publications: "publications"
   Join us!: "joinus"
