--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ title: Jagannathan Laboratory
 # Short description of your site
 description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
-collections:
-  people:
-   output: true
-  research:
-   output: true
+#collections:
+#  people:
+#   output: true
+#  research:
+#   output: true
 
 # --- Navigation bar options --- #
 
