--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,12 @@ description: Jagannathan lab at UC Denver, RNA Bioscience Inititative
 
 # List of links in the navigation bar
 navbar-links:
-  About Us: "aboutus"
-  People: "people"
   Research: "research"
   Publications: "publications"
+  People: "people"
+  Fun: "fun"
+  Resources: "resources"
+  About Us: "aboutus"
   Join us!: "joinus"
   #- Research: "https://jagannathan-lab.github.io/"
   #- Publications: "publications"
