--- a/_config.yml
+++ b/_config.yml
@@ -67,23 +67,13 @@ navbar-img: "/img/if-fish.png"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Sujatha Jagannathan
-  email: "sujatha.jagannathan@ucdenver.edu"
+  email: "jagannathan.laboratory@gmail.com"
   # facebook: yourname  # eg. daattali
   github: jagannathan-lab    # eg. daattali
-  twitter: RNA_biologist   # eg. daattali
-  # reddit: yourname    # eg. daattali
-  # google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: sujathajagannathan  # eg. daattali
-  # xing: yourname      # eg. daattali
+  twitter: JagannathanLab   # eg. daattali
   # stackoverflow: yourlink  # eg. "3943160/daattali"
-  # snapchat: yourname  # eg. daattali
-  # instagram: yourname # eg. daattali
   # youtube: yourlink   # eg. user/daattali or channel/daattali
-  # spotify: yourname   # eg. daattali
   telephone: yourphone   # eg. +14159998888
-  steam: yourname     # eg. daattali
-  twitch: yourname    # eg. daattali
-  # yelp: yourname      # eg. daattali
 
 # Select which links to show in the footer
 footer-links-active:
