--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navbar-links:
   Publications: "publications"
   People: "people"
   Fun: "fun"
-  News: "news"
+  #News: "news"
   Resources: "resources"
   Join us!: "joinus"
   #- Research: "https://jagannathan-lab.github.io/"
